change hero banner on mobile - its not the best solution and its a copy of the games feed which could probably have been a component.. but it works - fixes #79, fixes #69, fixes #57

--- a/src/stylesheets/components/_banner.sass
+++ b/src/stylesheets/components/_banner.sass
@@ -5,10 +5,6 @@
   &__container
     @extend %cappedWidth
     align-items: center
-    display: flex
-
-    @media (max-width: $maxSmallDesktop)
-      flex-wrap: wrap
 
   &__content
     @media (min-width: $smallDesktop)
