--- a/src/stylesheets/pageparts/_games-feed.sass
+++ b/src/stylesheets/pageparts/_games-feed.sass
@@ -5,50 +5,6 @@
   &__header
     +gutters
 
-  .flickity-viewport
-    +clamp('margin-bottom', $spacerMobile , $spacerDesktop / 2, $largeMobile, $desktop)
-    +clamp('margin-top', $spacerMobile , $spacerDesktop / 2, $largeMobile, $desktop)
-
-  .flickity-cell
-    aspect-ratio: 360/503
-    width: 70%
-
-    @media (min-width: $tablet)
-      width: 35%
-
-    @media (min-width: $smallDesktop)
-      width: 28%
-
-    &.is-selected
-      .game-block
-        transform: scale(1)
-
-  .flickity-cell.is-selected + .flickity-cell,
-  .flickity-cell:has(+ .flickity-cell.is-selected),
-  .flickity-cell:first-child:has(~ .flickity-cell.is-selected:last-child),
-  .flickity-cell.is-selected:first-child ~ .flickity-cell:last-child
-    .game-block
-      transform: scale(0.95)
-
-  .flickity-cell.is-selected + .flickity-cell
-    padding-left: $textSpacer/2
-    
-  .flickity-cell:has(+ .flickity-cell.is-selected)
-    padding-right: $textSpacer/2
-    
-  .flickity-cell:first-child:has(~ .flickity-cell.is-selected:last-child)
-    padding-left: $textSpacer/2
-    
-  .flickity-cell.is-selected:first-child ~ .flickity-cell:last-child
-    padding-right: $textSpacer/2
-
-  .game-block
-    transform: scale(0.90)
-
-  .button
-    @media (max-width: $largeMobile)
-      width: 100%
-
 .games-feed-header
   &__container
     @extend %cappedWidth
@@ -115,3 +71,49 @@
     position: absolute
     width: fit-content
     z-index: 2
+
+.games-feed,
+.hero-banner-flickity
+  .flickity-viewport
+    +clamp('margin-bottom', $spacerMobile , $spacerDesktop / 2, $largeMobile, $desktop)
+    +clamp('margin-top', $spacerMobile , $spacerDesktop / 2, $largeMobile, $desktop)
+
+  .flickity-cell
+    aspect-ratio: 360/503
+    width: 70%
+
+    @media (min-width: $tablet)
+      width: 35%
+
+    @media (min-width: $smallDesktop)
+      width: 28%
+
+    &.is-selected
+      .game-block
+        transform: scale(1)
+
+  .flickity-cell.is-selected + .flickity-cell,
+  .flickity-cell:has(+ .flickity-cell.is-selected),
+  .flickity-cell:first-child:has(~ .flickity-cell.is-selected:last-child),
+  .flickity-cell.is-selected:first-child ~ .flickity-cell:last-child
+    .game-block
+      transform: scale(0.95)
+
+  .flickity-cell.is-selected + .flickity-cell
+    padding-left: $textSpacer/2
+
+  .flickity-cell:has(+ .flickity-cell.is-selected)
+    padding-right: $textSpacer/2
+
+  .flickity-cell:first-child:has(~ .flickity-cell.is-selected:last-child)
+    padding-left: $textSpacer/2
+
+  .flickity-cell.is-selected:first-child ~ .flickity-cell:last-child
+    padding-right: $textSpacer/2
+
+  .game-block
+    transform: scale(0.90)
+
+  .button
+    @media (max-width: $largeMobile)
+      width: 100%
