--- a/src/stylesheets/pageparts/_page-banner.sass
+++ b/src/stylesheets/pageparts/_page-banner.sass
@@ -20,3 +20,9 @@
     .page-banner__media
       margin-left: 0
       order: -1
+
+  &__container
+    display: flex
+
+    @media (max-width: $maxSmallDesktop)
+      flex-wrap: wrap
